# lang_4

./: .gitignore  .replit  main.py  pyproject.toml  replit.nix
code/: code.txt  statement_test.txt  test.txt
tools/: __init__.py  funcs.py  handle_2.py  statement.py  string_tools.py
